--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 
 # data directory
-NGS-QCI-DB/Data
+NGS-QciDb/Data
+
+# build ignores
+NGS-QciDb/QciDbApp/target
+NGS-QciDb/QciDbApp/.classpath
+NGS-QciDb/QciDbApp/.project
+NGS-QciDb/QciDbApp/.settings
