--- a/NGS-QciDb/QciDbApp/pom.xml
+++ b/NGS-QciDb/QciDbApp/pom.xml
@@ -20,9 +20,14 @@
             <version>1.3</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.18</version>
+            <version>42.2.23</version>
         </dependency>
     </dependencies>
 
