--- a/NGS-QciDb/QciDbApp/pom.xml
+++ b/NGS-QciDb/QciDbApp/pom.xml
@@ -34,9 +34,23 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.23</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.35</version>
+        </dependency>
     </dependencies>
 
 	<build>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <targetPath>..</targetPath>
+                <includes>
+                    <include>config.properties</include>
+                </includes>
+            </resource>
+        </resources>  
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
