--- a/NGS-QciDb/QciDbApp/pom.xml
+++ b/NGS-QciDb/QciDbApp/pom.xml
@@ -39,6 +39,16 @@
             <artifactId>jersey-client</artifactId>
             <version>2.35</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.35</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>2.35</version>
+        </dependency>
     </dependencies>
 
 	<build>
