--- a/C3od/C3odApp/pom.xml
+++ b/C3od/C3odApp/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>11.2.0.jre11</version>
         </dependency>
+        <dependency>
+            <groupId>edu.kumc</groupId>
+            <artifactId>QciDbApp</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
