--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@ C3od/C3odApp/target
 C3od/C3odApp/.classpath
 C3od/C3odApp/.project
 C3od/C3odApp/.settings
+
+# data directory
+Ion-Db/Data
+
+# build ignores
+Ion-Db/IonDbApp/target
+Ion-Db/IonDbApp/.classpath
+Ion-Db/IonDbApp/.project
+Ion-Db/IonDbApp/.settings
