--- a/Illumina-QciDb/QciDbApp/pom.xml
+++ b/Illumina-QciDb/QciDbApp/pom.xml
@@ -32,6 +32,11 @@
             <version>42.2.23</version>
         </dependency>
         <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>2.35</version>
