--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
 
-# data directory
-Illumina-QciDb/Data
-
-# build ignores
-Illumina-QciDb/QciDbApp/target
-Illumina-QciDb/QciDbApp/.classpath
-Illumina-QciDb/QciDbApp/.project
-Illumina-QciDb/QciDbApp/.settings
-
 # build ignores
 C3od/C3odApp/target
 C3od/C3odApp/.classpath
 C3od/C3odApp/.project
 C3od/C3odApp/.settings
 
-# data directory
-Ion-Db/Data
-
-# build ignores
-Ion-Db/IonDbApp/target
-Ion-Db/IonDbApp/.classpath
-Ion-Db/IonDbApp/.project
-Ion-Db/IonDbApp/.settings
-
 # build ignores
 Cmol-Db/CmolDbApp/target
 Cmol-Db/CmolDbApp/.classpath
 Cmol-Db/CmolDbApp/.project
 Cmol-Db/CmolDbApp/.settings
+
+# data directory
+Cmol-Db/Data
