--- a/Cmol-Db/CmolDbApp/pom.xml
+++ b/Cmol-Db/CmolDbApp/pom.xml
@@ -37,6 +37,11 @@
             <version>1.6.2</version>
         </dependency>
         <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>msal4j</artifactId>
+            <version>1.13.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>2.35</version>
