--- a/Cmol-Db/CmolDbApp/pom.xml
+++ b/Cmol-Db/CmolDbApp/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>jersey-hk2</artifactId>
             <version>2.35</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.samtools</groupId>
+            <artifactId>htsjdk</artifactId>
+            <version>3.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
