--- a/Cmol-Db/CmolDbApp/pom.xml
+++ b/Cmol-Db/CmolDbApp/pom.xml
@@ -61,6 +61,16 @@
             <artifactId>htsjdk</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency> 
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId> 
+            <version>5.2.3</version> 
+          </dependency> 
+          <dependency> 
+            <groupId>org.apache.poi</groupId> 
+            <artifactId>poi-ooxml</artifactId> 
+            <version>5.2.3</version> 
+          </dependency>
     </dependencies>
 
     <build>
